--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "@mui/x-date-pickers": "^6.19.5",
     "@react-google-maps/api": "^2.19.3",
     "apexcharts": "^3.46.0",
-    "chart.js": "^4.4.1",
+    "axios": "^1.6.7",
+    "chart.js": "^2.9.4",
     "dayjs": "^1.11.10",
     "deps": "^1.0.0",
     "dotenv": "^16.4.5",
@@ -32,6 +33,7 @@
     "leaflet-geosearch": "^3.11.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^5.0.1",
